# packages-installer

./: README.md  com.ml4w.packagesinstaller.json  git.sh  install.sh  meson.build  packages-installer  setup.pkginst  setup.sh  sync.sh
src/: addcommand.py  addcommand.ui  addpackage.py  addpackage.ui  addvariable.py  addvariable.ui  backup.ui  cmdline.py  generate.py  generate.ui  main.py  meson.build  packagenames.py  packagenames.ui  packagesinstaller.gresource.xml  packagesinstaller.in  preferences.py  preferences.ui  window.py  window.ui
src/json/: template.json  template.pkginst
src/lib/: library.py
src/script/: packages-installer
src/script/dependencies/: dependencies
src/script/lang/: en.sh
src/script/lib/: library.sh
src/script/modules/: application.sh  configuration.sh  confirmation.sh  dependencies.sh  packages.sh  reboot.sh
src/scripts/: installer.sh  isinstalled_dnf.sh  isinstalled_flatpak.sh  isinstalled_pacman.sh  isinstalled_snipped.sh  isinstalled_zypper.sh  packages-installer
src/scripts/commands/: copr-repository.sh  echo.sh  flatpak-flathub.sh  flatpak-local.sh  flatpak-remote.sh  flatpak_flathub.sh  flatpak_local.sh  flatpak_remote.sh  package-paru.sh  package-yay.sh  package.sh  package_pacman.sh
src/scripts/isinstalled/: isinstalled_apt.sh  isinstalled_flatpak.sh  isinstalled_snipped.sh
src/style/: style.css
src/templates/: installer.sh
src/templates/commands/: copr-repository.sh  flatpak-app.sh  flatpak-flathub.sh  flatpak-local.sh  flatpak-remote.sh  package-apt.sh  package-dnf.sh  package-pacman.sh  package-paru.sh  (+2 more)
(+107 files in other folders)
